--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <section id="home" class="hero-section">
       <div class="container">
         <div class="row">
-          <div class="col-md-8 offset-md-2">
+          <div class="col-md-8 offset-md-2 col-xl-6 offset-xl-3">
             <h1>Use your money to make you happy</h1>
           </div>
-          <div class="col-md-10 offset-md-1">
+          <div class="col-md-10 offset-md-1 col-xl-8 offset-xl-2">
             <p>
               The Happiness Subscription allows you to relate your finance to your happiness. Reflect your spendings, set goals and receive recommendations by our app and industry experts.
             </p>
@@ -72,41 +72,55 @@
     <section id="features" class="feature-section">
       <div class="container">
         <div class="row feature-heading">
-          <div class="col-md-3"></div>
-          <div class="col-md-6 text-center">
-          <h2>What is it About?</h2>
+          <div class="col-md-8 offset-md-2 text-center">
+          <h1 class="mb-3">Features</h1>
           <p class="lead-1">
-            The Happiness Subscription uses your financial data to help you become happier. Learn about yourself, your spendings and what it means to run a happy financial life.
+            Does your money make you happy? The Happiness Subscription helps you to reflect on your expenses and provides recommendations on how you can use your money to make you happy. 
           </p>
           </div>
         </div>
-        <div class="row row-cols-1 row-cols-lg-3 g-3">
-          <div class="col">
-            <div class="feature">
-              <span class="feature-icon">📈</span>
-              <h4 class="display-4">Happiness Score</h4>
-              <p>
-                Based on your spending behaviour, you can gain a science-based score on how happy you are. Grasp the statistics behind it. No manual input is needed.
-              </p>
-            </div>
+        <div class="row feature">
+          <div class="col-xl-5 offset-xl-1 col-md-6 d-flex align-items-center justify-content-center feature-image order-2 order-md-1">
+            <img src="assets/images/the_happiness_subscription_product_rate_expense.png" alt="The Happiness Subscription product image - rate your happiness" />
           </div>
-          <div class="col">
-            <div class="feature">
-              <span class="feature-icon">💰</span>
-              <h4 class="display-4">Financial Happiness</h4>
-              <p>
-                Receive personalised financial recommendations to improve your happiness, no matter how happy you already are! Grow your score by committing to them.
-              </p>
-            </div>
+          <div class="col-xl-5 col-md-6 d-flex flex-column justify-content-center order-1 order-md-2">
+            <h2>Reflect your expenses</h2>
+            <p>
+              Build a long-term relationship with your finance. Take time to reflect on why you made an expense, if it was necessary or if it made you happy. We will score your happiness based on the reflections connected to your expenses.
+            </p>
           </div>
-          <div class="col">
-            <div class="feature">
-              <span class="feature-icon">🧑‍🎓</span>
-              <h4 class="display-4">Understand Happiness</h4>
-              <p>
-                Become a happiness expert by completing our state-of-the-art happiness course! Join our community and learn about what happiness is! 
-              </p>
-            </div>
+        </div>
+        <div class="row feature">
+          <div class="col-xl-5 col-md-6 d-flex align-items-center justify-content-center feature-image order-2 order-md-2">
+            <img src="assets/images/the_happiness_subscription_product_rate_expense.png" alt="The Happiness Subscription product image - rate your happiness" />
+          </div>
+          <div class="col-xl-5 offset-xl-1 col-md-6 d-flex flex-column justify-content-center order-1 order-md-1">
+            <h2>Set purposeful goals for yourself</h2>
+            <p>
+              Spend money on things that make you happy. Setting goals will help you direct your spending or saving behaviour towards a meaningful purpose.
+            </p>
+          </div>
+        </div>
+        <div class="row feature">
+          <div class="col-xl-5 offset-xl-1 col-md-6 d-flex align-items-center justify-content-center feature-image order-2 order-md-1">
+            <img src="assets/images/the_happiness_subscription_product_rate_expense.png" alt="The Happiness Subscription product image - rate your happiness" />
+          </div>
+          <div class="col-xl-5 col-md-6 d-flex flex-column justify-content-center order-1 order-md-2">
+            <h2>Join the community</h2>
+            <p>
+              Learn from industry experts how they use their money to lead a happy life. Get inspired by their stories and learn some tricks nobody has told you so far.
+            </p>
+          </div>
+        </div>
+        <div class="row feature">
+          <div class="col-xl-5 col-md-6 d-flex align-items-center justify-content-center feature-image order-2 order-md-2">
+            <img src="assets/images/the_happiness_subscription_product_connect_accounts.png" alt="The Happiness Subscription product image - rate your happiness" />
+          </div>
+          <div class="col-xl-5 offset-xl-1 col-md-6 d-flex flex-column justify-content-center order-1 order-md-1">
+            <h2>Keep the control over your data</h2>
+            <p>
+              You decide what data you share with us. Connect your accounts and choose the categories you want to import into the The Happiness Subscription. If you don’t want to give us access, you can manually track your expenses.
+            </p>
           </div>
         </div>
       </div>
@@ -115,40 +129,41 @@
       CTA
     -->
     <section id="waitlist" class="cta-section">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center mb-5">
+            <h1>Join the Waitlist</h1>
+          </div>
+        </div>
+      </div>
       <div class="container signup">
         <div class="row">
           <div class="col-lg-6 cta order-lg-2">
             <h1 class="mb-4">Get<br /> Happier.</h1>
-            <h4 class="display-4 mb-4">Get your exclusive invitation to our community and tell your friends about us!</h4>
+            <h4 class="display-4 mb-4">Join our waiting list and tell your friends about us!</h4>
             <p>Data privacy is very important to us. Your data will not be shared for any other purpose than your interest in our app.</p>
           </div>
           <div class="col-lg-6 signup-form">
             <h4 id="cta" class="display-4 singup-form-header">Welcome to The Happiness Subscription</h4>
             <form action="https://ylk4f3zecb.execute-api.eu-central-1.amazonaws.com/Prod" method="get">
               <div class="mb-4">
-                <label class="form-label" for="your-email">Your email<span class="required">*</span></label>
+                <label class="form-label" for="your-email">Your email</label>
                 <input class="form-control" id="your-email" name="your-email" placeholder="example@mail.com" type="email" required="required" />
               </div>
               <div class="mb-4">
-                <label class="form-label" for="refer-us">Refer us to your friends (separate email by comma)</label>
+                <label class="form-label" for="refer-us">Refer us to your friends</label>
                 <input class="form-control" id="refer-us" name="refer-us" placeholder="your-friend@mail.com, your-other-friend@mail.com" type="text" />
               </div>
               <div class="mb-4">
-                <label class="form-label">I’d pay for The Happiness Subscription*</label>
+                <label class="form-label" for="pay-amount">Would you pay a monthly fee for it?</label>
                 <p><small>*No obligation to pay (for research purposes only)</small></p>
-                <div>
-                  <input value="0" type="radio" class="btn-check" name="price" id="optionNo" autocomplete="off">
-                  <label class="btn btn-price-selection" for="optionNo">0</label>
-                  <input value="5" type="radio" class="btn-check" name="price" id="optionFive" autocomplete="off">
-                  <label class="btn btn-price-selection" for="optionFive">5</label>
-                  <input value="10" type="radio" class="btn-check" name="price" id="optionTen" autocomplete="off">
-                  <label class="btn btn-price-selection" for="optionTen">10</label>
-                  <input value="+10" type="radio" class="btn-check" name="price" id="optionMore" autocomplete="off">
-                  <label class="btn btn-price-selection" for="optionMore">More Than 10</label>
+                <div class="input-group">
+                  <span class="input-group-text" id="Currency">€</span>
+                  <input name="price" id="pay-amount" type="text" class="form-control" placeholder="Euro" aria-label="Euro" aria-describedby="Currency">
                 </div>
               </div>
               <div class="mb-4">
-                <button type="submit" class="btn btn-submit">Get an Invite!</button>
+                <button type="submit" class="btn btn-arrow">Join the Waitlist!</button>
               </div>
             </form>
           </div>
