added footer etc

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link" href="#features" title="Features">Features</a>
-              <a class="nav-link" href="#cta" title="Join the Waitlist">Join the Waitlist</a>
+              <a class="nav-link" href="#waitlist" title="Join the Waitlist">Join the Waitlist</a>
               <a class="nav-link" href="#testimonials" title="Testimonials">Testimonials</a>
               <a class="nav-link" href="#faq" title="FAQ">FAQ</a>
             </div>
@@ -175,6 +175,11 @@
     -->
     <section id="testimonials" class="testimonials-section">
       <div class="container">
+        <div class="col text-center mb-5">
+          <div class="row">
+            <h1>Testimonials</h1>
+          </div>
+        </div>
         <div class="row">
           <div class="col-md-6">
             <h2 class="header-testimonials">What Our <br /> Customers Say</h2>
@@ -203,6 +208,18 @@
         </div>
       </div>
     </section>
+    <!--
+      FAQ
+    -->
+    <section id="faq" class="faq-section">
+      <div class="container">
+        <div class="col text-center mb-5">
+          <div class="row">
+            <h1>FAQ</h1>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- 
       Footer 
     -->
@@ -212,14 +229,15 @@
           <h3 class="footer-heading">The Happiness Subscription</h3>
         </div>
         <div class="row mb-4">
-          <a href="./index.html#cta" title="Get on the waiting list">Get Happier Now</a>
+          <a href="./index.html#cta" title="Get on the waiting list">Join the Waitlist</a>
         </div>
         <div class="row mb-5">
           <nav class="nav">
             <a class="nav-link" title="Start" href="#home">Start</a>
-            <a class="nav-link" title="Features" href="#features">What is it About?</a>
-            <a class="nav-link" title="Get Invited" href="#cta">Get Invited</a>
+            <a class="nav-link" title="Features" href="#features">Features</a>
+            <a class="nav-link" title="Get Invited" href="#waitlist">Waitlist</a>
             <a class="nav-link" title="Testimonials" href="#testimonials">Testimonials</a>
+            <a class="nav-link" title="FAQ" href="#faq">FAQ</a>
             <a class="nav-link" title="Imprint" href="./imprint.html">Imprint</a>
             <a class="nav-link" title="Privacy Policy" href="./privacy-policy.html">Privacy Policy</a>
           </nav>
