--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>The Happiness Subscription</title>
+    <link rel="apple-touch-icon" sizes="152x152" href="./assets/images/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicons/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -48,8 +53,8 @@
               The Happiness Subscription allows you to relate your finance to your happiness. Reflect your spendings, set goals and receive recommendations by our app and industry experts.
             </p>
           </div>
-          <div class="col-md-4 offset-md-4">
-            <a class="btn btn-arrow hero-cta" href="#cta" title="Get Happier">Get Happier Now</a>
+          <div class="col-md-6 offset-md-3">
+            <a class="btn btn-arrow hero-cta" href="#waitlist" title="Get Happier">Get Happier Now</a>
           </div>
         </div>
       </div>
@@ -243,7 +248,7 @@
           </nav>
         </div>
         <div class="row mb-3">
-          <p>&copy; 2021 WHealth UG. All rights reserved.</p>
+          <p>&copy; 2022 WHealth UG. All rights reserved.</p>
         </div>
       </div>
     </footer>
