--- a/imprint.html
+++ b/imprint.html
@@ -15,21 +15,22 @@
     <!-- 
       Navbar 
     -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white menu">
-        <div class="container">
-          <a class="navbar-brand" href="./index.html#home">The Happiness Subscription</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link" title="What is it About?" href="./index.html#features">What is it About?</a>
-              <a class="nav-link" title="Get Invited" href="./index.html#cta" title="Get Invited">Get Invited</a>
-              <a class="nav-link" title="Testimonials" href="./index.html#testimonials" title="Testimonials">Testimonials</a>
-            </div>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary menu">
+      <div class="container">
+        <a class="navbar-brand" href="#home">The Happiness Subscription</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="./index#features" title="Features">Features</a>
+            <a class="nav-link" href="/index#waitlist" title="Join the Waitlist">Join the Waitlist</a>
+            <a class="nav-link" href="/index#testimonials" title="Testimonials">Testimonials</a>
+            <a class="nav-link" href="/index#faq" title="FAQ">FAQ</a>
           </div>
         </div>
-      </nav>
+      </div>
+    </nav>
     
       <section id="imprint">
         <div class="container">
@@ -68,20 +69,21 @@
           <h3 class="footer-heading">The Happiness Subscription</h3>
         </div>
         <div class="row mb-4">
-          <a href="./index.html#cta" title="Get on the waiting list">Get Happier Now</a>
+          <a href="./index.html#waitlist" title="Get on the waiting list">Join the Waitlist</a>
         </div>
         <div class="row mb-5">
           <nav class="nav">
             <a class="nav-link" title="Start" href="./index.html#home">Start</a>
-            <a class="nav-link" title="What is it About?" href="./index.html#features">What is it About?</a>
-            <a class="nav-link" title="Get Invited" href="./index.html#cta">Get Invited</a>
+            <a class="nav-link" title="Features" href="./index.html#features">Features</a>
+            <a class="nav-link" title="Get Invited" href="./index.html#waitlist">Waitlist</a>
             <a class="nav-link" title="Testimonials" href="./index.html#testimonials">Testimonials</a>
-            <a class="nav-link" title="Imprint" href="#">Imprint</a>
+            <a class="nav-link" title="FAQ" href="./index.html#faq">FAQ</a>
+            <a class="nav-link" title="Imprint" href="./imprint.html">Imprint</a>
             <a class="nav-link" title="Privacy Policy" href="./privacy-policy.html">Privacy Policy</a>
           </nav>
         </div>
         <div class="row mb-3">
-          <p>&copy; 2021 WHealth UG. All rights reserved.</p>
+          <p>&copy; 2022 WHealth UG. All rights reserved.</p>
         </div>
       </div>
     </footer>
