--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           <h3 class="footer-heading">The Happiness Subscription</h3>
         </div>
         <div class="row mb-4">
-          <a href="./index.html#cta" title="Get on the waiting list">Join the Waitlist</a>
+          <a href="#waitlist" title="Get on the waiting list">Join the Waitlist</a>
         </div>
         <div class="row mb-5">
           <nav class="nav">
