--- a/imprint.html
+++ b/imprint.html
@@ -17,16 +17,16 @@
     -->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary menu">
       <div class="container">
-        <a class="navbar-brand" href="#home">The Happiness Subscription</a>
+        <a class="navbar-brand" href="./index.html#home">The Happiness Subscription</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="./index#features" title="Features">Features</a>
-            <a class="nav-link" href="/index#waitlist" title="Join the Waitlist">Join the Waitlist</a>
-            <a class="nav-link" href="/index#testimonials" title="Testimonials">Testimonials</a>
-            <a class="nav-link" href="/index#faq" title="FAQ">FAQ</a>
+            <a class="nav-link" href="./index.html#features" title="Features">Features</a>
+            <a class="nav-link" href="/index.html#waitlist" title="Join the Waitlist">Join the Waitlist</a>
+            <a class="nav-link" href="/index.html#testimonials" title="Testimonials">Testimonials</a>
+            <a class="nav-link" href="/index.html#faq" title="FAQ">FAQ</a>
           </div>
         </div>
       </div>
