--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- 
       Navbar 
     -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary menu">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary menu">
         <div class="container">
           <a class="navbar-brand" href="#home">The Happiness Subscription</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -86,7 +86,7 @@
         </div>
         <div class="row feature">
           <div class="col-xl-5 offset-xl-1 col-md-6 d-flex align-items-center justify-content-center feature-image order-2 order-md-1">
-            <img src="assets/images/the_happiness_subscription_product_rate_expense.png" alt="The Happiness Subscription product image - rate your happiness" />
+            <img src="assets/images/the_happiness_subscription_product_rate_expense.gif" alt="The Happiness Subscription product image - rate your happiness" />
           </div>
           <div class="col-xl-5 col-md-6 d-flex flex-column justify-content-center order-1 order-md-2">
             <h2>Reflect your expenses</h2>
@@ -97,7 +97,7 @@
         </div>
         <div class="row feature">
           <div class="col-xl-5 col-md-6 d-flex align-items-center justify-content-center feature-image order-2 order-md-2">
-            <img src="assets/images/the_happiness_subscription_product_rate_expense.png" alt="The Happiness Subscription product image - rate your happiness" />
+            <img src="assets/images/the_happiness_subscription_goals.gif" alt="The Happiness Subscription product image - rate your happiness" />
           </div>
           <div class="col-xl-5 offset-xl-1 col-md-6 d-flex flex-column justify-content-center order-1 order-md-1">
             <h2>Set purposeful goals for yourself</h2>
@@ -108,7 +108,7 @@
         </div>
         <div class="row feature">
           <div class="col-xl-5 offset-xl-1 col-md-6 d-flex align-items-center justify-content-center feature-image order-2 order-md-1">
-            <img src="assets/images/the_happiness_subscription_product_rate_expense.png" alt="The Happiness Subscription product image - rate your happiness" />
+            <img src="assets/images/the_happiness_subscription_product_community_story.png" alt="The Happiness Subscription product image - rate your happiness" />
           </div>
           <div class="col-xl-5 col-md-6 d-flex flex-column justify-content-center order-1 order-md-2">
             <h2>Join the community</h2>
@@ -119,7 +119,7 @@
         </div>
         <div class="row feature">
           <div class="col-xl-5 col-md-6 d-flex align-items-center justify-content-center feature-image order-2 order-md-2">
-            <img src="assets/images/the_happiness_subscription_product_connect_accounts.png" alt="The Happiness Subscription product image - rate your happiness" />
+            <img src="assets/images/the_happiness_subscription_product_connect_accounts.gif" alt="The Happiness Subscription product image - rate your happiness" />
           </div>
           <div class="col-xl-5 offset-xl-1 col-md-6 d-flex flex-column justify-content-center order-1 order-md-1">
             <h2>Keep the control over your data</h2>
