--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -15,7 +15,7 @@
     <!-- 
       Navbar 
     -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary menu">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary menu">
       <div class="container">
         <a class="navbar-brand" href="./index.html#home">The Happiness Subscription</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
