--- a/index.html
+++ b/index.html
@@ -218,9 +218,29 @@
     -->
     <section id="faq" class="faq-section">
       <div class="container">
-        <div class="col text-center mb-5">
           <div class="row">
-            <h1>FAQ</h1>
+            <div class="col text-center mb-5">
+              <h1>FAQ</h1>
+            </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <article>
+              <h3 class="display-3">#1 What is The Happiness Subscription?</h3>
+              <p>The Happiness Subscription helps you reflect if you use your money to make yourself happy. The app connects to your bank accounts or lets you log your expense behaviour manually. From here, you reflect on your expenses regularly, uncovering whether you spent your money on activities that made you happy or whether you can remember an expense at all. The Happiness Subscription also helps you become happier by recommending actions to you that will help you to truly let your money work for you. </p>
+            </article>
+            <article>
+              <h3 class="display-3">#2 Where can I download The Happiness Subscription?</h3>
+              <p>The Happiness Subscription is not yet ready for download. The team is currently still in the experimentation phase, finding out how to help our customers in the best way. Once we're ready, you'll hear from us after <a href="#waitlist" title="Get on the waiting list">joining the waitlist.</a></p>
+            </article>
+            <article>
+              <h3 class="display-3">#3 Do I need to pay anything when signing up?</h3>
+              <p>There's no need to pay anything - at this point or in the future. We want to find out, though, whether you like The Happiness Subscription enough to pay for it once it's released potentially. But you decide to do so.</p>
+            </article>
+            <article>
+              <h4 class="display-4">#4 Are my expenses really linked to my happiness?</h4>
+              <p>Science tells us they are. To break it down neatly: If the things and activities you spend your money on aren't connected to your happiness, what is your reason for going to work every day. <a href="https://en.wikipedia.org/wiki/Maslow%27s_hierarchy_of_needs" target="_blank" title="Wikipedia: Maslows Hierarchy of Needs" >Maslow tells us </a>of specific needs we cover before investing in our self-actualisation. However, if you're beyond taking care of your physiological and safety needs, the question remains what are you doing with your money. The Happiness Subscription is our offering to help you invest your salary into your subjective well-being.</p>
+            </article>
           </div>
         </div>
       </div>
