Validate monthly fee is a number
Remove call to Lambda as it is Prod (only to be used when deployed in S3). No test version

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           </div>
           <div class="col-lg-6 signup-form">
             <h4 id="cta" class="display-4 singup-form-header">Welcome to The Happiness Subscription</h4>
-            <form action="https://ylk4f3zecb.execute-api.eu-central-1.amazonaws.com/Prod" method="get">
+            <form>
               <div class="mb-4">
                 <label class="form-label" for="your-email">Your email</label>
                 <input class="form-control" id="your-email" name="your-email" placeholder="example@mail.com" type="email" required="required" />
@@ -164,7 +164,7 @@
                 <p><small>*No obligation to pay (for research purposes only)</small></p>
                 <div class="input-group">
                   <span class="input-group-text" id="Currency">€</span>
-                  <input name="price" id="pay-amount" type="text" class="form-control" placeholder="Euro" aria-label="Euro" aria-describedby="Currency">
+                  <input name="price" id="pay-amount" type="number" class="form-control" placeholder="Euro" aria-label="Euro" aria-describedby="Currency">
                 </div>
               </div>
               <div class="mb-4">
