thank you page added, images modified

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             </div>
         </div>
         <div class="row">
-          <div class="col">
+          <div class="col-10 offset-1 col-md-8 offset-md-2">
             <article>
               <h3 class="display-3">#1 What is The Happiness Subscription?</h3>
               <p>The Happiness Subscription helps you reflect if you use your money to make yourself happy. The app connects to your bank accounts or lets you log your expense behaviour manually. From here, you reflect on your expenses regularly, uncovering whether you spent your money on activities that made you happy or whether you can remember an expense at all. The Happiness Subscription also helps you become happier by recommending actions to you that will help you to truly let your money work for you. </p>
